[tool.poetry]
name = "obj-ply-scaler"
version = "0.1.0"
description = "Quick scaling of OBJ and PLY files"
authors = ["S. Co1 <sco1.git@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0"}
flake8-annotations = "^1.1"
flake8-bugbear = "^20.1"
flake8-docstrings = "^1.5"
flake8-import-order = "^0.18"
flake8-tidy-imports = "^4.0"
flake8-todo = "^0.7"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
